Import of ABALAMA/App-MBUtiny-1.01 from CPAN.
gitpan-cpan-distribution: App-MBUtiny
gitpan-cpan-version:      1.01
gitpan-cpan-path:         ABALAMA/App-MBUtiny-1.01.tar.gz
gitpan-cpan-author:       ABALAMA
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -23,6 +23,7 @@ recommends:
   Data::Dumper: 0
 requires:
   CTK: 1.16
+  Class::C3::Adopt::NEXT: 0.13
   Digest::MD5: 2.51
   Digest::SHA1: 2.13
   File::Copy: 2.18
@@ -36,4 +37,4 @@ resources:
   homepage: http://www.serzik.com
   license: http://opensource.org/licenses/gpl-license.php
   repository: https://svn.code.sf.net/p/app-mbutiny/code/trunk
-version: 1.00
+version: 1.01
