--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
 license: open_source
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -24,17 +24,28 @@ recommends:
 requires:
   CTK: 1.16
   Class::C3::Adopt::NEXT: 0.13
+  DBI: 1.6
   Digest::MD5: 2.51
   Digest::SHA1: 2.13
   File::Copy: 2.18
   File::Find: 1.15
   File::Path: 2
+  HTTP::Headers: 5.8
+  HTTP::Request: 5.8
+  HTTP::Response: 5.8
+  LWP: 5.8
+  LWP::MediaTypes: 6
+  LWP::UserAgent: 5.8
+  Socket: 0
   Text::SimpleTable: 2.03
+  Text::Unidecode: 0.04
+  Try::Tiny: 0.07
   URI: 1.5
   WWW::MLite: 1.05
+  XML::Simple: 2.2
   perl: 5.008001
 resources:
   homepage: http://www.serzik.com
   license: http://opensource.org/licenses/gpl-license.php
   repository: https://svn.code.sf.net/p/app-mbutiny/code/trunk
-version: 1.01
+version: 1.02
