--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.96, CPAN::Meta::Converter version 2.120921'
 license: open_source
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -45,7 +45,7 @@ requires:
   XML::Simple: 2.2
   perl: 5.008001
 resources:
-  homepage: http://www.serzik.com
+  homepage: http://app-mbutiny.sourceforge.net
   license: http://opensource.org/licenses/gpl-license.php
   repository: https://svn.code.sf.net/p/app-mbutiny/code/trunk
-version: 1.02
+version: 1.03
